--- a/BuildHelper/BuildHelper.csproj
+++ b/BuildHelper/BuildHelper.csproj
@@ -5,12 +5,14 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>0.1</Version>
+    <Version>0.3</Version>
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="../LibBuildHelper/LibBuildHelper.csproj" />
+
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
-    <PackageReference Include="NLog" Version="6.0.2" />
+    <PackageReference Include="NLog" Version="6.0.6" />
   </ItemGroup>
 
   <ItemGroup>
